fix: path variable issue on some endpoints  (#10)
Fix @PathVariable annotations, fix some dependencies, and extra code changes

* fix: Add name parameter for @PathVariable annotation for all new controllers

* fix: Add new configuration parameter for maven-compiler-plugin (<parameters>true</parameters>)

* fix: Up number of version for commons-io:commons-io dependency

* fix: Add xalan:serializer dependency

* fix: Delivering changes for the SqlTestDataCleaner

* fix: Fix bulk actions

* fix: Fix generate statistics for Available data report

* fix: Java source code is cleansed, JavaDoc is updated; xalan dependency version management is fixed.

---------

Co-authored-by: kagw95 <aleksandr.kapustin.qubership@gmail.com>